# langchain-exploration

./: .env_sample  .gitignore  README.md  pyproject.toml
llm/: openai.py
pet_name_generator/: README.md  helper.py  main.py
stocks/: prepare_database.py  yfinance_poc.py
